--- a/.github/workflows/sentry-release.yml
+++ b/.github/workflows/sentry-release.yml
@@ -36,6 +36,16 @@ jobs:
         with:
           fetch-depth: 0 # 전체 히스토리 필요 (커밋 정보 추출)
       
+      - name: Setup jq (if needed)
+        continue-on-error: true
+        run: |
+          if ! command -v jq &> /dev/null; then
+            echo "📦 Installing jq for JSON parsing..."
+            sudo apt-get update && sudo apt-get install -y jq || echo "⚠️  jq 설치 실패, 기본 파싱 사용"
+          else
+            echo "✅ jq already installed"
+          fi
+      
       - name: Verify Sentry Configuration
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
@@ -87,7 +97,7 @@ jobs:
           
           # Sentry API 연결 테스트 (프로젝트 정보 조회)
           echo "🔗 Testing Sentry API connection..."
-          RESPONSE=$(curl -s -w "\n%{http_code}" \
+          RESPONSE=$(curl -s --max-time 10 -w "\n%{http_code}" \
             -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
             -H "Content-Type: application/json" \
             "https://sentry.io/api/0/projects/$SENTRY_ORG/$SENTRY_PROJECT/")
@@ -101,7 +111,7 @@ jobs:
             
             # Token 권한 확인 (releases API 테스트)
             echo "🔍 Checking token permissions for releases..."
-            RELEASE_TEST_CODE=$(curl -s -o /dev/null -w "%{http_code}" \
+            RELEASE_TEST_CODE=$(curl -s --max-time 10 -o /dev/null -w "%{http_code}" \
               -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
               -H "Content-Type: application/json" \
               -X GET \
@@ -141,7 +151,7 @@ jobs:
             
             # Token으로 접근 가능한 Organization 목록 조회
             echo "🔍 Discovering accessible organizations..."
-            ORG_RESPONSE=$(curl -s -w "\n%{http_code}" \
+            ORG_RESPONSE=$(curl -s --max-time 10 -w "\n%{http_code}" \
               -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
               -H "Content-Type: application/json" \
               "https://sentry.io/api/0/organizations/")
@@ -158,7 +168,7 @@ jobs:
               FIRST_ORG=$(echo "$ORG_BODY" | jq -r '.[0].slug' 2>/dev/null)
               if [ -n "$FIRST_ORG" ] && [ "$FIRST_ORG" != "null" ]; then
                 echo "🔍 Discovering projects in organization: $FIRST_ORG"
-                PROJ_RESPONSE=$(curl -s -w "\n%{http_code}" \
+                PROJ_RESPONSE=$(curl -s --max-time 10 -w "\n%{http_code}" \
                   -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
                   -H "Content-Type: application/json" \
                   "https://sentry.io/api/0/organizations/$FIRST_ORG/projects/")
@@ -202,7 +212,7 @@ jobs:
             
             # Token으로 접근 가능한 Organization 목록 조회
             echo "🔍 Discovering accessible organizations..."
-            ORG_RESPONSE=$(curl -s -w "\n%{http_code}" \
+            ORG_RESPONSE=$(curl -s --max-time 10 -w "\n%{http_code}" \
               -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
               -H "Content-Type: application/json" \
               "https://sentry.io/api/0/organizations/")
@@ -215,16 +225,20 @@ jobs:
               echo "$ORG_BODY" | jq -r '.[] | "   - \(.slug) (ID: \(.id))"' 2>/dev/null || echo "$ORG_BODY"
               echo ""
               
-              # 각 Organization의 Projects 조회
+              # 현재 설정된 Organization의 Projects 먼저 조회
+              CURRENT_ORG_FOUND=false
               ORG_SLUGS=$(echo "$ORG_BODY" | jq -r '.[].slug' 2>/dev/null)
+              
               if [ -n "$ORG_SLUGS" ]; then
+                # 현재 설정된 Organization이 목록에 있는지 확인
                 for ORG_SLUG in $ORG_SLUGS; do
-                  if [ "$ORG_SLUG" != "null" ] && [ -n "$ORG_SLUG" ]; then
-                    echo "🔍 Discovering projects in organization: $ORG_SLUG"
-                    PROJ_RESPONSE=$(curl -s -w "\n%{http_code}" \
+                  if [ "$ORG_SLUG" = "$SENTRY_ORG" ]; then
+                    CURRENT_ORG_FOUND=true
+                    echo "🔍 Discovering projects in current organization: $SENTRY_ORG"
+                    PROJ_RESPONSE=$(curl -s --max-time 10 -w "\n%{http_code}" \
                       -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
                       -H "Content-Type: application/json" \
-                      "https://sentry.io/api/0/organizations/$ORG_SLUG/projects/")
+                      "https://sentry.io/api/0/organizations/$SENTRY_ORG/projects/")
                     
                     PROJ_HTTP_CODE=$(echo "$PROJ_RESPONSE" | tail -n1)
                     PROJ_BODY=$(echo "$PROJ_RESPONSE" | sed '$d')
@@ -232,19 +246,46 @@ jobs:
                     if [ "$PROJ_HTTP_CODE" = "200" ]; then
                       PROJ_COUNT=$(echo "$PROJ_BODY" | jq 'length' 2>/dev/null || echo "0")
                       if [ "$PROJ_COUNT" -gt 0 ]; then
-                        echo "✅ Projects in '$ORG_SLUG':"
+                        echo "✅ Projects in '$SENTRY_ORG':"
                         echo "$PROJ_BODY" | jq -r '.[] | "   - \(.slug) (ID: \(.id))"' 2>/dev/null || echo "$PROJ_BODY"
                         echo ""
+                        break  # 현재 Organization에서 프로젝트를 찾았으므로 종료
                       else
-                        echo "   ℹ️  No projects found in this organization"
+                        echo "   ℹ️  No projects found in organization '$SENTRY_ORG'"
                         echo ""
                       fi
                     elif [ "$PROJ_HTTP_CODE" = "403" ]; then
-                      echo "   ⚠️  No permission to list projects in this organization"
+                      echo "   ⚠️  No permission to list projects in organization '$SENTRY_ORG'"
                       echo ""
                     fi
+                    break
                   fi
                 done
+                
+                # 현재 Organization에서 프로젝트를 찾지 못한 경우에만 다른 Organization 조회
+                if [ "$CURRENT_ORG_FOUND" = "false" ]; then
+                  echo "⚠️  Organization '$SENTRY_ORG' not found in accessible organizations"
+                  echo "🔍 Checking first available organization for reference..."
+                  FIRST_ORG=$(echo "$ORG_BODY" | jq -r '.[0].slug' 2>/dev/null)
+                  if [ -n "$FIRST_ORG" ] && [ "$FIRST_ORG" != "null" ]; then
+                    PROJ_RESPONSE=$(curl -s --max-time 10 -w "\n%{http_code}" \
+                      -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
+                      -H "Content-Type: application/json" \
+                      "https://sentry.io/api/0/organizations/$FIRST_ORG/projects/")
+                    
+                    PROJ_HTTP_CODE=$(echo "$PROJ_RESPONSE" | tail -n1)
+                    PROJ_BODY=$(echo "$PROJ_RESPONSE" | sed '$d')
+                    
+                    if [ "$PROJ_HTTP_CODE" = "200" ]; then
+                      PROJ_COUNT=$(echo "$PROJ_BODY" | jq 'length' 2>/dev/null || echo "0")
+                      if [ "$PROJ_COUNT" -gt 0 ]; then
+                        echo "✅ Example projects in '$FIRST_ORG':"
+                        echo "$PROJ_BODY" | jq -r '.[] | "   - \(.slug) (ID: \(.id))"' 2>/dev/null || echo "$PROJ_BODY"
+                        echo ""
+                      fi
+                    fi
+                  fi
+                fi
               fi
             elif [ "$ORG_HTTP_CODE" = "403" ]; then
               echo "❌ Token에 'org:read' 권한이 없습니다."
@@ -255,35 +296,42 @@ jobs:
               echo ""
             fi
             
-            echo "💡 해결 방법:"
             echo ""
-            echo "📋 프로젝트가 없는 경우:"
-            echo "1. Sentry 대시보드에서 프로젝트 생성:"
-            echo "   https://sentry.io/organizations/$SENTRY_ORG/projects/new/"
+            echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+            echo "💡 해결 방법"
+            echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
             echo ""
-            echo "2. 프로젝트 생성 시:"
-            echo "   - Platform: JavaScript 선택"
-            echo "   - Project Name: tech-blog (또는 원하는 이름)"
-            echo "   - Project Slug는 자동 생성되지만, 'tech-blog'로 설정 권장"
+            echo "📋 시나리오 1: 프로젝트가 아직 생성되지 않은 경우"
+            echo "   1. Sentry 대시보드에서 프로젝트 생성:"
+            echo "      👉 https://sentry.io/organizations/$SENTRY_ORG/projects/new/"
             echo ""
-            echo "📋 프로젝트가 이미 있는 경우:"
-            echo "1. 위에 표시된 Organization 및 Project 이름을 확인하세요"
-            echo "2. GitHub Secrets에 올바른 값을 설정:"
-            echo "   - SENTRY_ORG: Organization slug (현재: $SENTRY_ORG)"
-            echo "   - SENTRY_PROJECT: Project slug (현재: $SENTRY_PROJECT)"
+            echo "   2. 프로젝트 생성 시 설정:"
+            echo "      • Platform: JavaScript 선택"
+            echo "      • Project Name: tech-blog"
+            echo "      • Project Slug: tech-blog (자동 생성되지만 확인 필요)"
             echo ""
-            echo "3. GitHub CLI로 설정하는 방법:"
-            echo "   gh secret set SENTRY_ORG --body \"$SENTRY_ORG\""
-            echo "   gh secret set SENTRY_PROJECT --body \"실제-프로젝트-slug\""
+            echo "📋 시나리오 2: 프로젝트가 이미 있지만 이름이 다른 경우"
+            echo "   1. 위에 표시된 프로젝트 목록에서 정확한 이름 확인"
+            echo "   2. GitHub Secrets 업데이트:"
             echo ""
-            echo "4. 또는 GitHub 웹 UI에서 설정:"
-            echo "   Settings > Secrets and variables > Actions > New repository secret"
+            echo "      GitHub CLI 사용:"
+            echo "      gh secret set SENTRY_ORG --body \"$SENTRY_ORG\""
+            echo "      gh secret set SENTRY_PROJECT --body \"실제-프로젝트-slug\""
             echo ""
-            echo "5. Sentry 대시보드에서 프로젝트 목록 확인:"
-            echo "   https://sentry.io/organizations/$SENTRY_ORG/projects/"
+            echo "      또는 GitHub 웹 UI:"
+            echo "      Settings > Secrets and variables > Actions"
             echo ""
-            echo "6. 프로젝트 설정에서 정확한 Slug 확인:"
-            echo "   Project Settings > General > Project Slug"
+            echo "   3. Sentry 대시보드에서 직접 확인:"
+            echo "      👉 https://sentry.io/organizations/$SENTRY_ORG/projects/"
+            echo ""
+            echo "   4. 프로젝트 설정에서 정확한 Slug 확인:"
+            echo "      Project Settings > General > Project Slug"
+            echo ""
+            echo "📋 현재 설정된 값:"
+            echo "   • SENTRY_ORG: $SENTRY_ORG"
+            echo "   • SENTRY_PROJECT: $SENTRY_PROJECT"
+            echo ""
+            echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
             exit 1
           else
             echo "⚠️  Unexpected response (HTTP $HTTP_CODE)"
@@ -302,7 +350,7 @@ jobs:
           RELEASE_VERSION="${{ github.sha }}"
           echo "🔍 Checking if release $RELEASE_VERSION already exists..."
           
-          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" \
+          HTTP_CODE=$(curl -s --max-time 10 -o /dev/null -w "%{http_code}" \
             -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
             -H "Content-Type: application/json" \
             "https://sentry.io/api/0/projects/$SENTRY_ORG/$SENTRY_PROJECT/releases/$RELEASE_VERSION/")
@@ -364,7 +412,7 @@ jobs:
           while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
             sleep $((RETRY_COUNT + 1))  # 점진적 대기 (1초, 2초, 3초)
             
-            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" \
+            HTTP_CODE=$(curl -s --max-time 10 -o /dev/null -w "%{http_code}" \
               -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
               -H "Content-Type: application/json" \
               "https://sentry.io/api/0/projects/$SENTRY_ORG/$SENTRY_PROJECT/releases/$RELEASE_VERSION/")
@@ -413,7 +461,7 @@ jobs:
           HTTP_CODE=0
           
           while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
-            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" \
+            HTTP_CODE=$(curl -s --max-time 10 -o /dev/null -w "%{http_code}" \
               -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
               -H "Content-Type: application/json" \
               "https://sentry.io/api/0/projects/$SENTRY_ORG/$SENTRY_PROJECT/releases/$RELEASE_VERSION/")
