--- a/.github/workflows/buttondown-notify.yml
+++ b/.github/workflows/buttondown-notify.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
           # Get the list of added posts in this push
           # Use --diff-filter=A to only get added files (not modified)
-          NEW_POSTS=$(git diff --name-only --diff-filter=A HEAD~1 HEAD -- '_posts/*.md' 2>/dev/null || echo "")
+          # Use -z option for null-terminated strings to handle Unicode filenames correctly
+          NEW_POSTS=$(git diff --name-only -z --diff-filter=A HEAD~1 HEAD -- '_posts/*.md' 2>/dev/null | tr '\0' '\n' || echo "")
           
           if [ -z "$NEW_POSTS" ]; then
             echo "No new posts found"
@@ -39,8 +40,10 @@ jobs:
             echo "$NEW_POSTS"
             echo "has_new_posts=true" >> $GITHUB_OUTPUT
             # Get the most recent new post (first line)
+            # Base64 encode to preserve Unicode characters in GitHub Actions output
             LATEST_POST=$(echo "$NEW_POSTS" | head -1 | tr -d '\n')
-            echo "latest_post=$LATEST_POST" >> $GITHUB_OUTPUT
+            LATEST_POST_ENCODED=$(echo -n "$LATEST_POST" | base64 -w 0)
+            echo "latest_post_encoded=$LATEST_POST_ENCODED" >> $GITHUB_OUTPUT
             echo "Processing: $LATEST_POST"
           fi
 
@@ -68,12 +71,22 @@ jobs:
             exit 1
           fi
           
-          # 파일 경로 가져오기 및 검증
-          POST_FILE="${{ steps.check_posts.outputs.latest_post }}"
-          if [ -z "$POST_FILE" ]; then
+          # 파일 경로 가져오기 및 디코딩 (base64로 인코딩된 한글 파일명 처리)
+          POST_FILE_ENCODED="${{ steps.check_posts.outputs.latest_post_encoded }}"
+          if [ -z "$POST_FILE_ENCODED" ]; then
             echo "❌ No post file specified"
             exit 1
           fi
+          
+          # Base64 디코딩
+          POST_FILE=$(echo -n "$POST_FILE_ENCODED" | base64 -d)
+          
+          if [ -z "$POST_FILE" ]; then
+            echo "❌ Failed to decode post file path"
+            exit 1
+          fi
+          
+          echo "📄 Decoded post file: $POST_FILE"
           
           # 파일 존재 확인
           if [ ! -f "$POST_FILE" ]; then
