fix: GitHub Pages 배포 충돌 해결 - 대기 시간 증가 및 재시도 로직 추가
- 이전 배포 완료 대기 시간을 15초에서 60초로 증가
- 배포 실패 시 자동 재시도 로직 추가
- GitHub Pages 배포 충돌 오류 해결

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -68,12 +68,26 @@ jobs:
       - name: Wait for previous deployment
         run: |
           echo "⏳ Checking for in-progress deployments..."
-          # Wait a bit to allow previous deployment to complete
-          sleep 15
+          # Wait longer to allow previous deployment to complete
+          # GitHub Pages deployments can take 1-2 minutes
+          sleep 60
           echo "✅ Proceeding with deployment..."
       
       - name: Deploy to GitHub Pages
         id: deployment
+        uses: actions/deploy-pages@v4
+        timeout-minutes: 5
+        continue-on-error: true
+      
+      - name: Retry deployment if needed
+        if: steps.deployment.outcome == 'failure'
+        run: |
+          echo "⚠️ First deployment attempt failed, waiting and retrying..."
+          sleep 30
+      
+      - name: Deploy to GitHub Pages (Retry)
+        if: steps.deployment.outcome == 'failure'
+        id: deployment_retry
         uses: actions/deploy-pages@v4
         timeout-minutes: 5
       
