feat: 모든 포스팅 목차에 자동 링크 생성 기능 추가
- kramdown auto_ids 활성화로 헤더 자동 ID 생성
- JavaScript로 모든 헤더에 동적 ID 생성 (한글 제목 지원)
- 헤더 앵커 링크 아이콘 추가 (마우스 오버 시 표시)
- TOC 링크가 동적으로 생성된 헤더 ID 인식
- 스크롤 시 현재 섹션 하이라이트 기능 개선
- 스무스 스크롤 및 scroll-margin-top 적용으로 정확한 위치 이동
- 반응형 디자인 및 접근성 향상 (ARIA 레이블)

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ author:
 markdown: kramdown
 highlighter: rouge
 kramdown:
+  auto_ids: true
+  header_offset: 0
   syntax_highlighter: rouge
   syntax_highlighter_opts:
     block:
