fix: ButtonDown 워크플로우 개선 - 수정된 포스트도 이메일 발송
- 수정된 포스트도 이메일 발송 대상에 포함 (--diff-filter=M 추가)
- 디버깅 로그 추가로 문제 진단 용이
- 더 상세한 에러 메시지 제공
- 새 포스트와 수정된 포스트 모두 처리

문제 해결:
- 기존: 새로 추가된 파일만 감지 (--diff-filter=A)
- 개선: 새로 추가된 파일 + 수정된 파일 모두 감지
- 'No post files specified' 오류 해결

--- a/.github/workflows/buttondown-notify.yml
+++ b/.github/workflows/buttondown-notify.yml
@@ -32,16 +32,30 @@ jobs:
           # Use -z option for null-terminated strings to handle Unicode filenames correctly
           NEW_POSTS=$(git diff --name-only -z --diff-filter=A HEAD~1 HEAD -- '_posts/*.md' 2>/dev/null | tr '\0' '\n' || echo "")
           
-          if [ -z "$NEW_POSTS" ]; then
-            echo "No new posts found"
+          # Also check for modified posts (for re-posting scenarios)
+          # This allows triggering email for existing posts that were updated
+          MODIFIED_POSTS=$(git diff --name-only -z --diff-filter=M HEAD~1 HEAD -- '_posts/*.md' 2>/dev/null | tr '\0' '\n' || echo "")
+          
+          # Combine new and modified posts
+          ALL_POSTS=$(echo -e "${NEW_POSTS}\n${MODIFIED_POSTS}" | grep -v '^$' | sort -u || echo "")
+          
+          echo "🔍 Debug: Checking for posts..."
+          echo "  New posts: ${NEW_POSTS:-none}"
+          echo "  Modified posts: ${MODIFIED_POSTS:-none}"
+          echo "  All posts: ${ALL_POSTS:-none}"
+          
+          if [ -z "$ALL_POSTS" ]; then
+            echo "No new or modified posts found"
             echo "has_new_posts=false" >> $GITHUB_OUTPUT
+            echo "posts_json=[]" >> $GITHUB_OUTPUT
+            echo "post_count=0" >> $GITHUB_OUTPUT
           else
-            echo "New posts found:"
-            echo "$NEW_POSTS"
+            echo "Posts found:"
+            echo "$ALL_POSTS"
             echo "has_new_posts=true" >> $GITHUB_OUTPUT
             
             # Count posts
-            POST_COUNT=$(echo "$NEW_POSTS" | grep -c '^' || echo "0")
+            POST_COUNT=$(echo "$ALL_POSTS" | grep -c '^' || echo "0")
             echo "post_count=$POST_COUNT" >> $GITHUB_OUTPUT
             
             # Encode all posts as JSON array (more reliable than multiline)
@@ -58,13 +72,13 @@ jobs:
                   POSTS_JSON="$POSTS_JSON,\"$POST_ENCODED\""
                 fi
               fi
-            done <<< "$NEW_POSTS"
+            done <<< "$ALL_POSTS"
             POSTS_JSON="$POSTS_JSON]"
             
             # Store as single-line JSON (GitHub Actions output is more reliable this way)
             echo "posts_json=$POSTS_JSON" >> $GITHUB_OUTPUT
             
-            echo "Found $POST_COUNT new post(s) to process"
+            echo "Found $POST_COUNT post(s) to process (new + modified)"
           fi
 
       - name: Set up Python
@@ -95,12 +109,22 @@ jobs:
           POSTS_JSON="${{ steps.check_posts.outputs.posts_json }}"
           POST_COUNT="${{ steps.check_posts.outputs.post_count }}"
           
+          echo "🔍 Debug: POSTS_JSON length: ${#POSTS_JSON}"
+          echo "🔍 Debug: POST_COUNT: $POST_COUNT"
+          echo "🔍 Debug: POSTS_JSON (first 200 chars): ${POSTS_JSON:0:200}..."
+          
           if [ -z "$POSTS_JSON" ] || [ "$POSTS_JSON" = "[]" ]; then
             echo "❌ No post files specified"
+            echo "   POSTS_JSON: $POSTS_JSON"
+            echo "   POST_COUNT: $POST_COUNT"
+            echo "   This might happen if:"
+            echo "   1. No new posts were added (only existing posts were modified)"
+            echo "   2. The post files don't match the pattern '_posts/*.md'"
+            echo "   3. The git diff didn't detect any changes"
             exit 1
           fi
           
-          echo "📧 Processing $POST_COUNT new post(s)..."
+          echo "📧 Processing $POST_COUNT post(s)..."
           echo ""
           
           # Python 스크립트를 사용하여 JSON 배열 파싱 및 처리
