--- a/.github/workflows/buttondown-notify.yml
+++ b/.github/workflows/buttondown-notify.yml
@@ -105,29 +105,11 @@ jobs:
             exit 1
           fi
           
-          # 모든 새 포스트 가져오기 (JSON 배열 형식)
-          POSTS_JSON="${{ steps.check_posts.outputs.posts_json }}"
-          POST_COUNT="${{ steps.check_posts.outputs.post_count }}"
-          
-          echo "🔍 Debug: POSTS_JSON length: ${#POSTS_JSON}"
-          echo "🔍 Debug: POST_COUNT: $POST_COUNT"
-          echo "🔍 Debug: POSTS_JSON (first 200 chars): ${POSTS_JSON:0:200}..."
-          
-          if [ -z "$POSTS_JSON" ] || [ "$POSTS_JSON" = "[]" ]; then
-            echo "❌ No post files specified"
-            echo "   POSTS_JSON: $POSTS_JSON"
-            echo "   POST_COUNT: $POST_COUNT"
-            echo "   This might happen if:"
-            echo "   1. No new posts were added (only existing posts were modified)"
-            echo "   2. The post files don't match the pattern '_posts/*.md'"
-            echo "   3. The git diff didn't detect any changes"
-            exit 1
-          fi
-          
-          echo "📧 Processing $POST_COUNT post(s)..."
+          # Python 스크립트가 직접 git diff를 수행하여 포스트를 감지
+          # 이 방법이 더 안정적이고 큰 JSON을 다룰 때 문제가 없음
+          echo "📧 Processing posts detected by git diff..."
           echo ""
           
-          # Python 스크립트를 사용하여 JSON 배열 파싱 및 처리
-          # 여러 포스트를 한 번에 처리하는 배치 스크립트 사용
+          # Python 스크립트를 사용하여 git diff로 포스트 감지 및 이메일 발송
           python3 scripts/buttondown_notify_batch.py
           
